# knowledge-shelf

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/: copilot-instructions.md
.github/skills/: README.md
.github/skills/article-architect/: SKILL.md
.github/skills/clean-tone-editor/: SKILL.md
.github/skills/content-catalog-curator/: SKILL.md
.github/skills/cover-art-studio/: SKILL.md  example.html
.github/skills/knowledge-page-publisher/: SKILL.md
.github/skills/media-insight-lens/: SKILL.md
.github/skills/share-doc-publisher/: SKILL.md
.github/skills/visual-explainer/: SKILL.md
content/articles/ai-agent-weekly/: article.md
content/articles/ai-dev-conference-day1/: article.md
content/articles/ai-dev-conference-day2/: article.md
content/articles/gpt-6-spud/: article.md
docs/courses/deepagents/: 01-quickstart-harness-wechat.html  01-quickstart-harness-wechat.md  04-subagents-hitl-permissions-wechat.html  05-interpreters-streaming-production-wechat.md  README.md
docs/courses/fine-tuning/: fine-tuning-intro-wechat.html  fine-tuning-intro-wechat.md
docs/courses/langchain/: langchain-middleware-wechat.html  langchain-streaming-wechat.html  langchain-streaming-wechat.md  (+2 more)
output/: README.md  index.html
output/courses/langgraph/code/local_server_demo/: langgraph.json  pyproject.toml
tools/: README.md  docx2md  docx_to_md.py  download_aidd_docs.py  extract_aidd_documents.py  ocr_aidd_images.py  ocr_aidd_incremental.py  reorganize_learning_library.py  sync_docs.sh  update_langgraph_paths.py  validate_learning_library.py
(+80 files in other folders)
