[project]
name = "langgraph-local-server-demo"
version = "0.1.0"
description = "A minimal LangGraph local server demo for the course"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "python-dotenv>=1.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]
